@@ -26,6 +26,8 @@ S3method(print,sjstats_pred_accuracy)
 S3method(print,sjstats_r2)
 S3method(print,sjstats_zcf)
 S3method(print,svyglm.nb)
+S3method(rope,default)
+S3method(rope,stanreg)
 S3method(wtd_sd,data.frame)
 S3method(wtd_sd,default)
 S3method(wtd_sd,matrix)
@@ -89,6 +91,7 @@ export(resp_val)
 export(resp_var)
 export(rmse)
 export(robust)
+export(rope)
 export(rse)
 export(sd_pop)
 export(se)
@@ -118,6 +121,7 @@ importFrom(coin,pvalue)
 importFrom(coin,statistic)
 importFrom(coin,wilcox_test)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,between)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
