@@ -2,9 +2,12 @@
 % Please edit documentation in R/HDI.R
 \name{hdi}
 \alias{hdi}
+\alias{rope}
 \title{Compute high density intervals (HDI) for MCMC samples}
 \usage{
 hdi(x, prob = 0.9, trans = NULL)
+
+rope(x, rope, trans = NULL)
 }
 \arguments{
 \item{x}{A vector of values from a probability distribution (e.g., posterior
@@ -14,17 +17,27 @@ probabilities from MCMC sampling), or a \code{stanreg}-object.}
 interval that is to be estimated.}
 
 \item{trans}{Name of a function or character vector naming a function, used
-to apply transformations on the returned HDI-values.}
+to apply transformations on the returned HDI-values resp.
+(for \code{rope()}) on the values of the posterior distribution, before
+calculating the rope based on the boundaries given in \code{rope}. Note
+that the values in \code{rope} are not transformed.}
+
+\item{rope}{Vector of length two, indicating the lower and upper limit of a
+range around zero, which indicates the region of practical equivalence.
+Values of the posterior distribution within this range are considered as
+being "practically equivalent to zero".}
 }
 \value{
-If \code{x} is a vector, \code{hdi()} returns a vector of length two
+For \code{hdi()}, if \code{x} is a vector, returns a vector of length two
         with the lower and upper limit of the HDI; if \code{x} is a
         \code{stanreg}-object, returns a tibble with lower and upper HDI-limits
-        for each predictor.
+        for each predictor. For \code{rope()}, returns the percentage of values
+        from \code{x} that are within the boundaries of \code{rope}.
 }
 \description{
 \code{hdi()} computes the high density interval for values from
-             MCMC samples.
+             MCMC samples. \code{rope()} calculates the proportion of a posterior
+             distribution that lies within of a region of practical equivalence.
 }
 \details{
 Computation is based on the code from Kruschke 2015, pp. 727f.
@@ -43,6 +56,15 @@ fit <- stan_glm(
 )
 # compute hdi, transform on "odds ratio scale"
 hdi(fit, trans = exp)
+
+# compute rope, on scale of linear predictor. finds proportion
+# of posterior distribution values between -1 and 1.
+rope(fit, rope = c(-1, 1))
+
+# compute rope, boundaries as "odds ratios". finds proportion of
+# posterior distribution values, which - after being exponentiated -
+# are between .8 and 1.25 (about -.22 and .22 on linear scale)
+rope(fit, rope = c(.8, 1.25), trans = exp)
 
 }
 \references{
